			   XPCE ChangeLog
			   ==============

* ENHANCED: Subwindow layout adjustment if actual resizing the windows is
  slow.

* ENHANCED: Windows: JPEG bitmap loading to use a more direct
  approach through DIB.  A similar approach was already in the X11 version
  for some time.

* MODIFIED: Windows: by default we now use the Netscape 216 colour
  colour-cupe as read-only colour-map on 8-bit displays.  This provides
  better reproducable and generally better results.

* ADDED: `image<-rotate' now accepts a float rather then an integer (conversion
  ensures compatibility, though fractional arguments are no longer rounded to
  the nearest integer.

* COMPAT: re-added `finder->directory' (Bob Wielinga).

* FIXED: Completion (TAB) in file_item (library(pce_file_item)).

* FIXED: `graphical->draw_image': correctly handle non-square images.

* MODIFIED: PceEmacs command "M-x insert_date" to insert just the date, not
  the time.


VERSION 6.0.6, distributed with SWI-Prolog 5.0.6
================================================

* FIXED: PceEmacs prolog mode trapping an error when pausing during
  singleton-replace mode (error became severe after fixing timer :-).

* FIXED: real_range type handling of unbound (e.g. "1.0..").

* FIXED: X11 version: timers sometimes stopped spontaneously.

* ENHANCED: library(find_file).  New and more flexible file-browser.

* FIXED: interface to generate error(instantiation_error,_) exception on
  uninstantiated data rather than a type-error.

* ENHANCED: XPCE Inspector to show textual value of a string rather then
  the address of the text and numerical indication of flags.

* ADDED: `dialog<-border' to always return a size object.

* ADDED: `file_item <->exists', fixing browse mode in PceEmacs save_as and
  friends.

* FIXED: Explicit window placement in Windows version. 

* FIXED: avoid loosing a file-descriptor in prolog_xref.pl if a loaded
  file contains a syntax-error in the first term.  Affects PceEmacs in